ffi/poc/cpp/corpus/nounk/include/ak_abi.h

/* ABI v1 section 4: the transcoder's growth callback; may move the buffer. */
typedef int32_t (*ak_grow_fn)(void *sink, int32_t want, uint8_t * *dst, int32_t *cap);
/* ABI v1 section 4: source code units -> UTF-8 into dst; returns bytes written or an error. */
typedef int32_t (*ak_transcode_fn)(const void *src, size_t len, uint8_t *dst, int32_t cap, ak_grow_fn grow, void *sink);
/* ABI v1 section 3: the host's log sink. */
typedef void (*ak_log_fn)(void *ctx, uint32_t level, const uint8_t *msg, size_t msg_len);
/* ABI v1 section 4, encode: a blob as DATA in the group. `len` counts SOURCE code units; `tc == NULL` means the field is ABSENT. */
struct ak_str {
  const void *data;
  size_t len;
  ak_transcode_fn tc;
};
typedef struct ak_str ak_str;
/* ABI v1 section 4, decode: an OFFSET into the buffer the host handed in. */
struct ak_span {
  uint32_t off;
  uint32_t len;
  uint32_t coder;
};
typedef struct ak_span ak_span;
/* Decision 11's unknown-field bag: two words, raw tag-and-value runs. */
struct ak_blob {
  const void *data;
  size_t len;
};
typedef struct ak_blob ak_blob;
/* Decision 11 (WP5 step 7): one message occurrence's unknown-field buffer, host memory the core copies the runs into. */
struct ak_unk_buf {
  void *data;
  uint32_t len;
  uint32_t cap;
};
typedef struct ak_unk_buf ak_unk_buf;
/* Decision 11: one message position's configuration; all zero = its unknowns are discarded. */
struct ak_unk_opts {
  struct ak_unk_buf buf;
  ak_grow_fn grow;
};
typedef struct ak_unk_opts ak_unk_opts;
/* Decision 11 rule 1: a REPEATED position's configuration: buffers taken in order, cleared in place as they are taken; `grow` the fallback. */
struct ak_unk_pool {
  struct ak_unk_buf *bufs;
  uint32_t n;
  ak_grow_fn grow;
};
typedef struct ak_unk_pool ak_unk_pool;
/* ak_init's out-parameter (ABI v1 section 3/5): a code and a detail. */
struct ak_err {
  int32_t code;
  uint32_t detail;
};
typedef struct ak_err ak_err;
/* ak_init's options (ABI v1 section 3). */
struct ak_init_opts {
  uint32_t abi_version;
  uint32_t flags;
  ak_log_fn log;
  void *log_ctx;
};
typedef struct ak_init_opts ak_init_opts;
/* README R5: boundary-call counts, counted in the CORE (zero unless the core is a counting build). */
struct AkCounters {
  uint64_t forward;
  uint64_t reverse;
  uint64_t transcode;
  uint64_t prefix_moves;
  uint64_t prefix_bytes;
  uint64_t grows;
};
typedef struct AkCounters AkCounters;
/* ABI v1 section 7.1: one pull record header, 24 bytes; the payload follows, padded to 8. */
struct ak_bdr_rec {
  uint32_t op;
  uint32_t slot;
  int64_t token;
  uint32_t n;
  uint32_t bytes;
};
typedef struct ak_bdr_rec ak_bdr_rec;
/* ---- section 3: the lifecycle (plan.lifecycle, R-G7) ----------------------------
 * Every binding rendered from this plan calls `ak_init` before its first codec or RPC
 * call and treats AK_OK and AK_ALREADY_INITIALIZED as success. A core built with `init-guard`
 * refuses every entry point with AK_ERR_UNINITIALIZED until it has. The prototype
 * is among the fixed entry points below. */

/* Encode group for `TaskOptionsOptionsEntry`. */
struct ak_efix_TaskOptionsOptionsEntry {
  struct ak_str key;
  struct ak_str value;
  uint32_t presence;
};
/* Decode group for `TaskOptionsOptionsEntry`. */
struct ak_dfix_TaskOptionsOptionsEntry {
  struct ak_span key;
  struct ak_span value;
  uint32_t presence;
};
/* Encode group for `Timestamp`. */
struct ak_efix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
/* Decode group for `Timestamp`. */
struct ak_dfix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
/* Encode group for `Duration`. */
struct ak_efix_Duration {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
/* Decode group for `Duration`. */
struct ak_dfix_Duration {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
/* Encode group for `ResultRaw`. */
struct ak_efix_ResultRaw {
  struct ak_str session_id;
  struct ak_str name;
  struct ak_str owner_task_id;
  int32_t status;
  struct ak_efix_Timestamp created_at;
  struct ak_efix_Timestamp completed_at;
  struct ak_str result_id;
  int64_t size;
  struct ak_str created_by;
  struct ak_str opaque_id;
  uint8_t manual_deletion;
  uint32_t presence;
};
/* Decode group for `ResultRaw`. */
struct ak_dfix_ResultRaw {
  struct ak_span session_id;
  struct ak_span name;
  struct ak_span owner_task_id;
  int32_t status;
  struct ak_dfix_Timestamp created_at;
  struct ak_dfix_Timestamp completed_at;
  struct ak_span result_id;
  int64_t size;
  struct ak_span created_by;
  struct ak_span opaque_id;
  uint8_t manual_deletion;
  uint32_t presence;
};
/* Encode group for `TaskOptions`. */
struct ak_efix_TaskOptions {
  struct ak_efix_Duration max_duration;
  int32_t max_retries;
  int32_t priority;
  struct ak_str partition_id;
  struct ak_str application_name;
  struct ak_str application_version;
  struct ak_str application_namespace;
  struct ak_str application_service;
  struct ak_str engine_type;
  uint32_t presence;
};
/* Decode group for `TaskOptions`. */
struct ak_dfix_TaskOptions {
  struct ak_dfix_Duration max_duration;
  int32_t max_retries;
  int32_t priority;
  struct ak_span partition_id;
  struct ak_span application_name;
  struct ak_span application_version;
  struct ak_span application_namespace;
  struct ak_span application_service;
  struct ak_span engine_type;
  uint32_t presence;
};
/* Encode group for `TaskOutput`. */
struct ak_efix_TaskOutput {
  uint8_t success;
  struct ak_str error;
  uint32_t presence;
};
/* Decode group for `TaskOutput`. */
struct ak_dfix_TaskOutput {
  uint8_t success;
  struct ak_span error;
  uint32_t presence;
};
/* Encode group for `TaskDetailed`. */
struct ak_efix_TaskDetailed {
  struct ak_str id;
  struct ak_str session_id;
  struct ak_str owner_pod_id;
  int32_t status;
  struct ak_str status_message;
  struct ak_efix_TaskOptions options;
  struct ak_efix_Timestamp created_at;
  struct ak_efix_Timestamp submitted_at;
  struct ak_efix_Timestamp started_at;
  struct ak_efix_Timestamp ended_at;
  struct ak_efix_Timestamp pod_ttl;
  struct ak_efix_TaskOutput output;
  struct ak_str pod_hostname;
  struct ak_efix_Timestamp received_at;
  struct ak_efix_Timestamp acquired_at;
  struct ak_efix_Duration creation_to_end_duration;
  struct ak_efix_Duration processing_to_end_duration;
  struct ak_str initial_task_id;
  struct ak_efix_Duration received_to_end_duration;
  struct ak_efix_Timestamp processed_at;
  struct ak_efix_Timestamp fetched_at;
  struct ak_str payload_id;
  struct ak_str created_by;
  uint32_t presence;
};
/* Decode group for `TaskDetailed`. */
struct ak_dfix_TaskDetailed {
  struct ak_span id;
  struct ak_span session_id;
  struct ak_span owner_pod_id;
  int32_t status;
  struct ak_span status_message;
  struct ak_dfix_TaskOptions options;
  struct ak_dfix_Timestamp created_at;
  struct ak_dfix_Timestamp submitted_at;
  struct ak_dfix_Timestamp started_at;
  struct ak_dfix_Timestamp ended_at;
  struct ak_dfix_Timestamp pod_ttl;
  struct ak_dfix_TaskOutput output;
  struct ak_span pod_hostname;
  struct ak_dfix_Timestamp received_at;
  struct ak_dfix_Timestamp acquired_at;
  struct ak_dfix_Duration creation_to_end_duration;
  struct ak_dfix_Duration processing_to_end_duration;
  struct ak_span initial_task_id;
  struct ak_dfix_Duration received_to_end_duration;
  struct ak_dfix_Timestamp processed_at;
  struct ak_dfix_Timestamp fetched_at;
  struct ak_span payload_id;
  struct ak_span created_by;
  uint32_t presence;
};
/* Encode group for `TaskSummary`. */
struct ak_efix_TaskSummary {
  struct ak_str id;
  struct ak_str session_id;
  struct ak_efix_TaskOptions options;
  int32_t status;
  struct ak_efix_Timestamp created_at;
  struct ak_str error;
  struct ak_str status_message;
  int64_t count_data_dependencies;
  uint32_t presence;
};
/* Decode group for `TaskSummary`. */
struct ak_dfix_TaskSummary {
  struct ak_span id;
  struct ak_span session_id;
  struct ak_dfix_TaskOptions options;
  int32_t status;
  struct ak_dfix_Timestamp created_at;
  struct ak_span error;
  struct ak_span status_message;
  int64_t count_data_dependencies;
  uint32_t presence;
};
/* Encode group for `Empty`. */
struct ak_efix_Empty {
  uint32_t presence;
};
/* Decode group for `Empty`. */
struct ak_dfix_Empty {
  uint32_t presence;
};
/* Encode group for `Probe`. */
struct ak_efix_Probe {
  struct ak_str id;
  int32_t opt_count;
  struct ak_str opt_label;
  uint8_t opt_flag;
  uint32_t body_case;
  int64_t body_as_int;
  struct ak_str body_as_text;
  struct ak_str body_as_blob;
  struct ak_efix_Timestamp body_as_stamp;
  struct ak_efix_Empty body_as_nothing;
  uint32_t presence;
};
/* Decode group for `Probe`. */
struct ak_dfix_Probe {
  struct ak_span id;
  int32_t opt_count;
  struct ak_span opt_label;
  uint8_t opt_flag;
  uint32_t body_case;
  int64_t body_as_int;
  struct ak_span body_as_text;
  struct ak_span body_as_blob;
  struct ak_dfix_Timestamp body_as_stamp;
  struct ak_dfix_Empty body_as_nothing;
  uint32_t presence;
};
/* Encode group for `UploadResultData`. */
struct ak_efix_UploadResultData {
  struct ak_str session_id;
  struct ak_str result_id;
  struct ak_str data_chunk;
  uint32_t presence;
};
/* Decode group for `UploadResultData`. */
struct ak_dfix_UploadResultData {
  struct ak_span session_id;
  struct ak_span result_id;
  struct ak_span data_chunk;
  uint32_t presence;
};
/* Encode group for `MetricsBatch`. */
struct ak_efix_MetricsBatch {
  struct ak_str id;
  uint32_t presence;
};
/* Decode group for `MetricsBatch`. */
struct ak_dfix_MetricsBatch {
  struct ak_span id;
  uint32_t presence;
};
/* Encode group for `Pair`. */
struct ak_efix_Pair {
  struct ak_str key;
  int32_t value;
  uint32_t presence;
};
/* Decode group for `Pair`. */
struct ak_dfix_Pair {
  struct ak_span key;
  int32_t value;
  uint32_t presence;
};
/* Encode group for `ListResultsResponse`. */
struct ak_efix_ListResultsResponse {
  int32_t page;
  int32_t total;
  uint32_t presence;
};
/* Decode group for `ListResultsResponse`. */
struct ak_dfix_ListResultsResponse {
  int32_t page;
  int32_t total;
  uint32_t presence;
};
/* Encode group for `ListTasksDetailedResponse`. */
struct ak_efix_ListTasksDetailedResponse {
  int32_t page;
  int32_t total;
  uint32_t presence;
};
/* Decode group for `ListTasksDetailedResponse`. */
struct ak_dfix_ListTasksDetailedResponse {
  int32_t page;
  int32_t total;
  uint32_t presence;
};
/* Encode group for `ListTaskSummaryResponse`. */
struct ak_efix_ListTaskSummaryResponse {
  uint32_t presence;
};
/* Decode group for `ListTaskSummaryResponse`. */
struct ak_dfix_ListTaskSummaryResponse {
  uint32_t presence;
};
/* Encode group for `ListProbeResponse`. */
struct ak_efix_ListProbeResponse {
  uint32_t presence;
};
/* Decode group for `ListProbeResponse`. */
struct ak_dfix_ListProbeResponse {
  uint32_t presence;
};
/* Encode group for `ListMetricsResponse`. */
struct ak_efix_ListMetricsResponse {
  uint32_t presence;
};
/* Decode group for `ListMetricsResponse`. */
struct ak_dfix_ListMetricsResponse {
  uint32_t presence;
};
/* Encode group for `UploadResultDataMessage`. */
struct ak_efix_UploadResultDataMessage {
  struct ak_efix_UploadResultData upload;
  uint32_t presence;
};
/* ---- the fixed entry points (plan.FIXED.functions) ----------------------------- */
/* lifecycle */
/* Once per process, before anything else (plan.lifecycle). */
int32_t ak_init(const struct ak_init_opts *opts, struct ak_err *err);