ffi/poc/csharp/src/Harness/GeneratedNounk/Abi.cs

// @generated by ffi/poc/codec/gen/cs_binding.py (driven by ffi/poc/csharp/gen/generate.py)
// from ffi/schema/shapes.json. Do not edit: `gen/generate.py --check` fails if this file is not
// what the generator writes today.
//
// The C ABI of ABI v1 for this message set, declared for C#.

using System;
using System.Collections.Generic;
using System.Runtime.CompilerServices;
using System.Runtime.InteropServices;

namespace Armonik.Ffi.Harness;

/// ABI v1 section 4, encode: a blob as DATA in the group. `len` counts SOURCE code
/// units; `tc == NULL` means the field is ABSENT.
[StructLayout(LayoutKind.Sequential)]
public struct ak_str
{
    public IntPtr data;
    public nuint len;
    public IntPtr tc;
}

/// ABI v1 section 4, decode: an OFFSET into the buffer the host handed in.
[StructLayout(LayoutKind.Sequential)]
public struct ak_span
{
    public uint off;
    public uint len;
    public uint coder;
}

/// Decision 11's unknown-field bag: two words, raw tag-and-value runs.
[StructLayout(LayoutKind.Sequential)]
public struct ak_blob
{
    public IntPtr data;
    public nuint len;
}

/// Decision 11 (WP5 step 7): one message occurrence's unknown-field buffer, host memory
/// the core copies the runs into.
[StructLayout(LayoutKind.Sequential)]
public struct ak_unk_buf
{
    public IntPtr data;
    public uint len;
    public uint cap;
}

/// Decision 11: one message position's configuration; all zero = its unknowns are
/// discarded.
[StructLayout(LayoutKind.Sequential)]
public struct ak_unk_opts
{
    public ak_unk_buf buf;
    public IntPtr grow;
}

/// Decision 11 rule 1: a REPEATED position's configuration: buffers taken in order,
/// cleared in place as they are taken; `grow` the fallback.
[StructLayout(LayoutKind.Sequential)]
public struct ak_unk_pool
{
    public IntPtr bufs;
    public uint n;
    public IntPtr grow;
}

/// ak_init's out-parameter (ABI v1 section 3/5): a code and a detail.
[StructLayout(LayoutKind.Sequential)]
public struct ak_err
{
    public int code;
    public uint detail;
}

/// ak_init's options (ABI v1 section 3).
[StructLayout(LayoutKind.Sequential)]
public struct ak_init_opts
{
    public uint abi_version;
    public uint flags;
    public IntPtr log;
    public IntPtr log_ctx;
}

/// README R5: boundary-call counts, counted in the CORE (zero unless the core is a
/// counting build).
[StructLayout(LayoutKind.Sequential)]
public struct AkCounters
{
    public ulong forward;
    public ulong reverse;
    public ulong transcode;
    public ulong prefix_moves;
    public ulong prefix_bytes;
    public ulong grows;
}

/// ABI v1 section 7.1: one pull record header, 24 bytes; the payload follows, padded to
/// 8.
[StructLayout(LayoutKind.Sequential)]
public struct ak_bdr_rec
{
    public uint op;
    public uint slot;
    public long token;
    public uint n;
    public uint bytes;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_TaskOptionsOptionsEntry
{
    public ak_str key;
    public ak_str value;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_TaskOptionsOptionsEntry
{
    public ak_span key;
    public ak_span value;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_Timestamp
{
    public long seconds;
    public int nanos;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_Timestamp
{
    public long seconds;
    public int nanos;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_Duration
{
    public long seconds;
    public int nanos;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_Duration
{
    public long seconds;
    public int nanos;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_ResultRaw
{
    public ak_str session_id;
    public ak_str name;
    public ak_str owner_task_id;
    public int status;
    public ak_efix_Timestamp created_at;
    public ak_efix_Timestamp completed_at;
    public ak_str result_id;
    public long size;
    public ak_str created_by;
    public ak_str opaque_id;
    public byte manual_deletion;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_ResultRaw
{
    public ak_span session_id;
    public ak_span name;
    public ak_span owner_task_id;
    public int status;
    public ak_dfix_Timestamp created_at;
    public ak_dfix_Timestamp completed_at;
    public ak_span result_id;
    public long size;
    public ak_span created_by;
    public ak_span opaque_id;
    public byte manual_deletion;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_TaskOptions
{
    public ak_efix_Duration max_duration;
    public int max_retries;
    public int priority;
    public ak_str partition_id;
    public ak_str application_name;
    public ak_str application_version;
    public ak_str application_namespace;
    public ak_str application_service;
    public ak_str engine_type;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_TaskOptions
{
    public ak_dfix_Duration max_duration;
    public int max_retries;
    public int priority;
    public ak_span partition_id;
    public ak_span application_name;
    public ak_span application_version;
    public ak_span application_namespace;
    public ak_span application_service;
    public ak_span engine_type;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_TaskOutput
{
    public byte success;
    public ak_str error;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_TaskOutput
{
    public byte success;
    public ak_span error;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_TaskDetailed
{
    public ak_str id;
    public ak_str session_id;
    public ak_str owner_pod_id;
    public int status;
    public ak_str status_message;
    public ak_efix_TaskOptions options;
    public ak_efix_Timestamp created_at;
    public ak_efix_Timestamp submitted_at;
    public ak_efix_Timestamp started_at;
    public ak_efix_Timestamp ended_at;
    public ak_efix_Timestamp pod_ttl;
    public ak_efix_TaskOutput output;
    public ak_str pod_hostname;
    public ak_efix_Timestamp received_at;
    public ak_efix_Timestamp acquired_at;
    public ak_efix_Duration creation_to_end_duration;
    public ak_efix_Duration processing_to_end_duration;
    public ak_str initial_task_id;
    public ak_efix_Duration received_to_end_duration;
    public ak_efix_Timestamp processed_at;
    public ak_efix_Timestamp fetched_at;
    public ak_str payload_id;
    public ak_str created_by;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_TaskDetailed
{
    public ak_span id;
    public ak_span session_id;
    public ak_span owner_pod_id;
    public int status;
    public ak_span status_message;
    public ak_dfix_TaskOptions options;
    public ak_dfix_Timestamp created_at;
    public ak_dfix_Timestamp submitted_at;
    public ak_dfix_Timestamp started_at;
    public ak_dfix_Timestamp ended_at;
    public ak_dfix_Timestamp pod_ttl;
    public ak_dfix_TaskOutput output;
    public ak_span pod_hostname;
    public ak_dfix_Timestamp received_at;
    public ak_dfix_Timestamp acquired_at;
    public ak_dfix_Duration creation_to_end_duration;
    public ak_dfix_Duration processing_to_end_duration;
    public ak_span initial_task_id;
    public ak_dfix_Duration received_to_end_duration;
    public ak_dfix_Timestamp processed_at;
    public ak_dfix_Timestamp fetched_at;
    public ak_span payload_id;
    public ak_span created_by;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_TaskSummary
{
    public ak_str id;
    public ak_str session_id;
    public ak_efix_TaskOptions options;
    public int status;
    public ak_efix_Timestamp created_at;
    public ak_str error;
    public ak_str status_message;
    public long count_data_dependencies;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_TaskSummary
{
    public ak_span id;
    public ak_span session_id;
    public ak_dfix_TaskOptions options;
    public int status;
    public ak_dfix_Timestamp created_at;
    public ak_span error;
    public ak_span status_message;
    public long count_data_dependencies;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_Empty
{
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_Empty
{
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_Probe
{
    public ak_str id;
    public int opt_count;
    public ak_str opt_label;
    public byte opt_flag;
    public uint body_case;
    public long body_as_int;
    public ak_str body_as_text;
    public ak_str body_as_blob;
    public ak_efix_Timestamp body_as_stamp;
    public ak_efix_Empty body_as_nothing;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_Probe
{
    public ak_span id;
    public int opt_count;
    public ak_span opt_label;
    public byte opt_flag;
    public uint body_case;
    public long body_as_int;
    public ak_span body_as_text;
    public ak_span body_as_blob;
    public ak_dfix_Timestamp body_as_stamp;
    public ak_dfix_Empty body_as_nothing;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_UploadResultData
{
    public ak_str session_id;
    public ak_str result_id;
    public ak_str data_chunk;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_UploadResultData
{
    public ak_span session_id;
    public ak_span result_id;
    public ak_span data_chunk;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_MetricsBatch
{
    public ak_str id;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_MetricsBatch
{
    public ak_span id;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_Pair
{
    public ak_str key;
    public int value;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_Pair
{
    public ak_span key;
    public int value;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_ListResultsResponse
{
    public int page;
    public int total;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_ListResultsResponse
{
    public int page;
    public int total;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_ListTasksDetailedResponse
{
    public int page;
    public int total;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_ListTasksDetailedResponse
{
    public int page;
    public int total;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_ListTaskSummaryResponse
{
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_ListTaskSummaryResponse
{
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_ListProbeResponse
{
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_ListProbeResponse
{
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_ListMetricsResponse
{
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_ListMetricsResponse
{
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_UploadResultDataMessage
{
    public ak_efix_UploadResultData upload;
    public uint presence;
}
